# rust-axum-postgres-api

./: Cargo.toml  docker-compose.yml
migrations/: 20230612120255_init.up.sql
src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
