[package]
name = "rust-axum-postgres-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = {version = "1.28.2", features = ["full"]}
tower-http = {version= "0.4.0", features=["cors"]}
serde_json = "1.0.96"
serde = {version="1.0.164", features=["derive"]}
chrono = {version = "0.4.26", features=["serde"]}
dotenv = "0.15.0"
uuid = {version = "1.3.3", features = ["serde", "v4"] }
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]}
